# SW8S-rgui

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css
.github/workflows/: cargo-tag.yml  clippy.yml  release.yml
public/: tailwind.css
src/: config.rs  live_mission.rs  main.rs  planning_mission.rs  test.rs  util.rs
