[package]
name = "sw8s-rgui"
version = "0.1.1"
authors = ["Bennett Petzold <bennettpetzold01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ['desktop'] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
tokio = "1.36.0"
http = "1.0.0"
http-range = "0.1.5"
anyhow = "1.0.80"
rand = "0.8.5"
reqwest = "0.11.24"
const_format = "0.2.32"
wry = "0.37.0"
webkit2gtk = "2.0.1"
global-hotkey = "0.4.2"
tao = "0.24.1"

