[package]
name = "sw8s-rgui"
version = "0.1.1"
authors = ["Bennett Petzold <bennettpetzold01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ['desktop'] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
tokio = "1.36.0"
const_format = "0.2.32"
global-hotkey = "0.4.2"
