[package]
name = "sw8s-rgui"
version = "0.1.1"
authors = ["Bennett Petzold <bennettpetzold01@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[dependencies]

dioxus-desktop = { version = "0.5.0-alpha.0" }
dioxus = { version = "0.5.0-alpha.0", features = ['desktop'] }
log = "0.4.19"
tokio = "1.36.0"
const_format = "0.2.32"
global-hotkey = "0.4.2"

# Debug
dioxus-logger = { version = "0.4.1", features = ['timestamps'] }
lazy_static = "1.4.0"
rfd = "0.14.0"
futures = "0.3.30"
chrono = "0.4.34"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
async-lazy = { version = "0.1.0", features = ["parking_lot"] }
